# obsidian-company-kb

./: .gitignore  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
assets/docx-templates/: specification_services.docx
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  MODULES.md  SECURITY.md  TESTING.md  USER_GUIDE.md
docs/GOST/: GOST_19.md  GOST_34.md  SECURITY_AUDIT.md
references/: BASES.md  CANVAS.md  CONTRACT_VARS.md  DATAVIEW_MIGRATION.md  RELATIONSHIPS.md  TAGS.md  TEMPLATES.md  TEMPLATES_CONTACTS.md  VAULT_STRUCTURE.md
scripts/: archive_manager.py  audit_links.py  bulk_status_update.py  daily_operations.py  generate_canvas.py  generate_contract.py  generate_report.py  generate_specification.py  grammar_check.py  import_csv.py  import_meeting.py  import_vcard.py  init_vault.sh  periodic_synthesis.py  quick_capture.py  relationship_sync.py  sync_moc.py  validate_vault.py
tests/: conftest.py  test_archive_manager.py  test_audit_links.py  test_bases.py  test_bulk_status_update.py  test_canvas.py  test_daily_operations.py  test_financial.py  test_generate_canvas.py  test_generate_contract.py  test_generate_report.py  test_generate_specification.py  test_grammar_check.py  test_import_csv.py  test_import_meeting.py  test_import_vcard.py  test_init_vault.py  test_periodic_synthesis.py  test_quick_capture.py  test_relationship_sync.py  test_skill_frontmatter.py  test_sync_moc.py  test_templates.py  test_validate_vault.py
tests/fixtures/: contract_template.docx  sample.csv  sample.vcf
(+19 files in other folders)
