[project]
name = "obsidian-company-kb"
version = "1.0.0"
requires-python = ">=3.10"
description = "Corporate knowledge base management for Obsidian vaults"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "functional: functional tests",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "A", "C4", "ICN", "PIE", "T20", "PYI", "PT", "SIM", "TCH", "ERA", "PGH", "PL", "RUF"]
ignore = ["D100", "D104", "S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention = "google"
